fix: changed color of header and footer to increase contrast ratio for accessibility

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: rgb(65, 163, 196);
+    background-color: #1F5C6B;
     color: white;
     margin-bottom: auto;
     padding: 10px;
