--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: rgb(65, 163, 196);
+    background-color: #1F5C6B;
     color: white;
     margin: auto;
     padding: 0;
